# shift-manager

./: .gitignore  Cargo.toml  README.md  Rocket.toml  log-config.yml  run.sh
shift-manager-web/static/css/: login.css
shift-manager-web/static/js/: api.js  calendar.js  index.js  login.js  settings.js
shift-manager-web/templates/: index.html.hbs  login.html.hbs  settings.html
src/: base_controller.rs  base_model.rs  controller.rs  database.rs  main.rs  schema.rs  shift_log.rs  web_controller.rs
src/controller/: mod.rs  rest_auth.rs  rest_shift_expansion.rs  rest_shift_structure.rs  rest_user.rs
src/database/: db.rs  mod.rs  shift_expansion_db.rs  shift_structure_db.rs  user_db.rs
src/models/: mod.rs  shift_expansion.rs  shift_structure.rs  user.rs
src/security/: jwt.rs  mod.rs
src/shift_expansion/: mod.rs  model.rs
src/shift_structure/: mod.rs  model.rs
src/user/: auth.rs  mod.rs  model.rs
