[package]
name = "turni_manager"
version = "0.1.0"
authors = ["rippetanks <simone.martelli.98@gmail.com>"]
edition = "2018"

[dependencies]
#postgres = { version = "0.15.2",  features = ["with-native-tls", "with-openssl"] }
postgres = { version = "0.15.2", features = ["with-chrono"] }
chrono = { version = "0.4.6", features = ["serde"] }
iron = "0.6.0"
iron-cors = "0.8.0"
mime = "0.3.12"
router = "0.6.0"
urlencoded = "0.6.0"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
jsonwebtoken = "5.0.1"
sha3 = "0.8.1"
hex = "0.3.2"
rand = "0.6.5"
log = "0.4"
simplelog = "^0.5.3"
r2d2 = "0.8.4"
r2d2_postgres = "0.14.0"